# FEM.edu

./: .gitignore  Contents.txt  README.md  VERSION.rst  pyproject.toml
ISSUES/POTENTIAL ISSUE WITH FEMEDU/: current_CESG_504_Assignment_05 (1).ipynb
docs/: .buildinfo  design.html  examples.html  genindex.html  implementation.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: design.doctree  environment.pickle  examples.doctree  implementation.doctree  index.doctree
docs/_sources/: design.rst.txt  examples.rst.txt  implementation.rst.txt  index.rst.txt
docs/design/: element.html  material.html  node.html  plotter.html  solver.html  system.html
docs/examples/: beam_examples.html  continuum_examples.html  frame_examples.html  mixed_structures_examples.html  plate_examples.html  truss_examples.html
docs/implementation/: Beam2D_class.html  DOF_class.html  ElasticSection.html  ElementPlotter3D_class.html  ElementPlotter_class.html  Element_class.html  FiberMaterial.html  FiberSectio.html  FiberSection.html  Frame2D_class.html  LinearSolver_class.html  LinearTriangle_class.html  Material_class.html  NewtonRaphsonSolver_class.html  Node_class.html  PlaneStrain.html  PlaneStress.html  PlateSection.html  Plot_Support_Classes.html  Plotter3D_class.html  Plotter_class.html  Sections.html  Solver_class.html  System_class.html  Transformation_class.html  Truss_class.html
sphinx/: Makefile  VERSION.rst
sphinx/source/: conf.py  (+6 more)
src/: DoF.py  Element.py  Node.py  Solver.py  System.py  __init__.py  demo.py  main.py  tester.py
(+463 files in other folders)
